--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,7 @@ matplotlib
 requests
 #edgar
 #alpaca_data_loader
-#pickle
-fastapi>=0.68.0
+#picklefastapi>=0.68.0
 uvicorn>=0.15.0
 pandas>=1.3.0
 plotly>=5.3.0
@@ -14,5 +13,5 @@ uvicorn>=0.15.0
 pandas>=1.3.0
 plotly>=5.3.0
 python-multipart>=0.0.5
-numpy<2.0.0  # Questa versione è compatibile con Python 3.10
+numpy>=1.24.0,<1.26.0  # Questa versione è compatibile con Python 3.10
 # alpaca_data_loader  # Rimuovi o commenta questa riga se non è essenziale
