--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,4 @@ uvicorn>=0.15.0
 pandas>=1.3.0
 plotly>=5.3.0
 python-multipart>=0.0.5
-numpy>=1.24.0,<1.26.0  # Questa versione è compatibile con Python 3.10
-# alpaca_data_loader  # Rimuovi o commenta questa riga se non è essenziale
+numpy == 1.24.3
