--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ matplotlib
 requests
 #edgar
 #alpaca_data_loader
-#picklefastapi>=0.68.0
+picklefastapi>=0.68.0
 uvicorn>=0.15.0
 pandas>=1.3.0
 plotly>=5.3.0
